--- a/Manualstack/conffiles/nova.conf
+++ b/Manualstack/conffiles/nova.conf
@@ -6,7 +6,7 @@ transport_url = rabbit://openstack:RABBIT_PASS@controller:5672/
 [api]
 auth_strategy = keystone
 [api_database]
-connection = mysql+pymysql://nova:NOVA_DBPASS@controller/nova_api
+connection = mysql+pymysql://nova:NOVA_DBPASS@192.168.0.5/nova_api
 [barbican]
 [cache]
 [cinder]
@@ -17,7 +17,7 @@ connection = mysql+pymysql://nova:NOVA_DBPASS@controller/nova_api
 [cors]
 [cyborg]
 [database]
-connection = mysql+pymysql://nova:NOVA_DBPASS@localhost/nova
+connection = mysql+pymysql://nova:NOVA_DBPASS@192.168.0.5/nova
 [devices]
 [ephemeral_storage_encryption]
 [filter_scheduler]
