Complete manual stack with 1 compute node is complete-Add Playbook to turn it into ansible.

--- a/Manualstack/computenodefiles/nova.conf
+++ b/Manualstack/computenodefiles/nova.conf
@@ -1,12 +1,13 @@
 [DEFAULT]
+log_dir = /var/log/nova
 lock_path = /var/lock/nova
 state_path = /var/lib/nova
-my_ip = 192.168.0.6
 transport_url = rabbit://openstack:RABBIT_PASS@controller:5672/
+my_ip = 192.169.0.5
 [api]
 auth_strategy = keystone
 [api_database]
-connection = mysql+pymysql://nova:NOVA_DBPASS@localhost/nova_api
+connection = mysql+pymysql://nova:NOVA_DBPASS@controller/nova_api
 [barbican]
 [cache]
 [cinder]
@@ -17,7 +18,7 @@ connection = mysql+pymysql://nova:NOVA_DBPASS@localhost/nova_api
 [cors]
 [cyborg]
 [database]
-connection = mysql+pymysql://nova:NOVA_DBPASS@localhost/nova
+connection = mysql+pymysql://nova:NOVA_DBPASS@controller/nova
 [devices]
 [ephemeral_storage_encryption]
 [filter_scheduler]
@@ -52,11 +53,8 @@ region_name = RegionOne
 project_name = service
 username = neutron
 password = ubuntu
-service_metadata_proxy = true
-metadata_proxy_shared_secret = METADATA_SECRET
 [notifications]
 [oslo_concurrency]
-lock_path = /var/lib/nova/tmp
 [oslo_messaging_amqp]
 [oslo_messaging_kafka]
 [oslo_messaging_notifications]
@@ -88,10 +86,15 @@ password = ubuntu
 [vendordata_dynamic_auth]
 [vmware]
 [vnc]
+enabled = true
+server_listen = 0.0.0.0
+server_proxyclient_address = $my_ip
+novncproxy_base_url = http://controller:6080/vnc_auto.html
 [workarounds]
 [wsgi]
+[xenserver]
 [zvm]
 [cells]
 enable = False
 [os_region_name]
-openstack = RegionOne
+openstack =
