--- a/Manualstack/conffiles/linuxbridge_agent.ini
+++ b/Manualstack/conffiles/linuxbridge_agent.ini
@@ -8,5 +8,5 @@ enable_security_group = true
 firewall_driver = neutron.agent.linux.iptables_firewall.IptablesFirewallDriver
 [vxlan]
 enable_vxlan = true
-local_ip = '192.169.0.20'
+local_ip = 192.169.0.20
 l2_population = true
